紫色の牙、投擲槍を追加

--- a/resource_pack/texts/ja_JP.lang
+++ b/resource_pack/texts/ja_JP.lang
@@ -124,6 +124,7 @@ item.gaiawanderer:ghost_robe=霊体の羽衣
 item.gaiawanderer:myth_sword=蜻蛉剣
 item.gaiawanderer:shebrus_spear=鋭牙の投擲槍
 item.gaiawanderer:frost_spear=氷結の投擲槍
+item.gaiawanderer:wyvern_spear=紫牙の投擲槍
 item.gaiawanderer:burn_spear=焔銃槍
 item.gaiawanderer:canon_spear=焔砲槍
 item.gaiawanderer:gravity_spear=サージ
@@ -156,6 +157,7 @@ item.gaiawanderer:burn_crown=焔の王冠
 item.gaiawanderer:fly_wing=鮮やかな翅
 item.gaiawanderer:strong_string=強靭な糸
 item.gaiawanderer:shebrus_fang=鋭利な牙
+item.gaiawanderer:wyvern_fang=紫色の牙
 item.gaiawanderer:bug_extract=虫の体液
 item.gaiawanderer:green_gel=グリーンジェル
 item.gaiawanderer:red_gel=レッドジェル
