ムッシュアラクネのキルログが正常に表示されないバグの修正

--- a/resource_pack/texts/ja_JP.lang
+++ b/resource_pack/texts/ja_JP.lang
@@ -38,7 +38,9 @@ entity.gaiawanderer:fortresscancer<>.name=フォートレスキャンサー
 entity.gaiawanderer:fortresscancer.name=フォートレスキャンサー
 entity.gaiawanderer:fortress.name=フォートレス
 entity.gaiawanderer:arachne_humanoid.name=ムッシュアラクネ
+entity.gaiawanderer:arachne_humanoid<>.name=ムッシュアラクネ
 entity.gaiawanderer:arachne_spider.name=ムッシュアラクネ
+entity.gaiawanderer:arachne_spider<>.name=ムッシュアラクネ
 entity.gaiawanderer:mutant_nether_jelly<>.name=ミュータントネザージェリー
 entity.gaiawanderer:mutant_nether_jelly.name=ミュータントネザージェリー
 entity.gaiawanderer:opabinia<>.name=オパビニア
