サウンドと言語ファイルの追記

--- a/resource_pack/texts/ja_JP.lang
+++ b/resource_pack/texts/ja_JP.lang
@@ -20,7 +20,6 @@ entity.gaiawanderer:mantis.name=ローヴマンティス
 entity.gaiawanderer:cutlassfish.name=タチウオ
 entity.gaiawanderer:locust.name=オオイナゴ
 entity.gaiawanderer:rolypse.name=ロリープス
-entity.gaiawanderer:marrella.name=マーレラ
 entity.gaiawanderer:mushspider.name=ムッシュスパイダー
 entity.gaiawanderer:rotten_zombie.name=腐蝕ゾンビ
 entity.gaiawanderer:frost_beak.name=フロストビーク
@@ -28,6 +27,9 @@ entity.gaiawanderer:frost_beak<>.name=フロストビーク
 entity.gaiawanderer:enchanted_book_trader.name=本屋
 entity.gaiawanderer:forestgriff.name=フォレストグリフ
 entity.gaiawanderer:forestgriff<>.name=フォレストグリフ
+entity.gaiawanderer:marrella.name=マーレラ・ファウンダー
+entity.gaiawanderer:shebrus_founder.name=シェブラス・ファウンダー
+entity.gaiawanderer:ender_proto.name=エンダープロト
 
 entity.gaiawanderer:elsalamander<>.name=エルサラマンダー
 entity.gaiawanderer:elsalamander.name=エルサラマンダー
@@ -43,8 +45,8 @@ entity.gaiawanderer:arachne_spider.name=ムッシュアラクネ
 entity.gaiawanderer:arachne_spider<>.name=ムッシュアラクネ
 entity.gaiawanderer:mutant_nether_jelly<>.name=ミュータントネザージェリー
 entity.gaiawanderer:mutant_nether_jelly.name=ミュータントネザージェリー
-entity.gaiawanderer:opabinia<>.name=オパビニア
-entity.gaiawanderer:opabinia.name=オパビニア
+entity.gaiawanderer:opabinia<>.name=オパビニア・ファウンダー
+entity.gaiawanderer:opabinia.name=オパビニア・ファウンダー
 entity.gaiawanderer:opabinia_energy<>.name=オパビニア・サテライト
 entity.gaiawanderer:opabinia_energy.name=オパビニア・サテライト
 entity.gaiawanderer:rimafloga<>.name=リマフロガ
@@ -84,18 +86,20 @@ item.spawn_egg.entity.gaiawanderer:mantis.name=ローヴマンティスを出現
 item.spawn_egg.entity.gaiawanderer:cutlassfish.name=タチウオを出現させる
 item.spawn_egg.entity.gaiawanderer:locust.name=オオイナゴを出現させる
 item.spawn_egg.entity.gaiawanderer:rolypse.name=ロリープスを出現させる
-item.spawn_egg.entity.gaiawanderer:marrella.name=マーレラを出現させる
+item.spawn_egg.entity.gaiawanderer:marrella.name=マーレラ・ファウンダーを出現させる
 item.spawn_egg.entity.gaiawanderer:mushspider.name=ムッシュスパイダーを出現させる
 item.spawn_egg.entity.gaiawanderer:rotten_zombie.name=腐蝕ゾンビを出現させる
 item.spawn_egg.entity.gaiawanderer:frost_beak.name=フロストビークを出現させる
 item.spawn_egg.entity.gaiawanderer:forestgriff.name=フォレストグリフを出現させる
+item.spawn_egg.entity.gaiawanderer:shebrus_founder.name=シェブラス・ファウンダーを出現させる
+item.spawn_egg.entity.gaiawanderer:ender_proto.name=エンダープロトを出現させる
 item.spawn_egg.entity.gaiawanderer:enchanted_book_trader.name=本屋を出現させる
 
 item.spawn_egg.entity.gaiawanderer:elsalamander.name=§dエルサラマンダーを出現させる
 item.spawn_egg.entity.gaiawanderer:fortresscancer.name=§dフォートレスキャンサーを出現させる
 item.spawn_egg.entity.gaiawanderer:thunder_bird.name=§dサンダーバードを出現させる
 item.spawn_egg.entity.gaiawanderer:arachne_humanoid.name=§dムッシュアラクネを出現させる
-item.spawn_egg.entity.gaiawanderer:opabinia.name=§dオパビニアを出現させる
+item.spawn_egg.entity.gaiawanderer:opabinia.name=§dオパビニア・ファウンダーを出現させる
 item.spawn_egg.entity.gaiawanderer:rimafloga.name=§dリマフロガを出現させる
 
 item.gaiawanderer:wandering_ticket=行商人招待券
@@ -142,6 +146,9 @@ item.gaiawanderer:rusted_key=朽ち果てた鍵
 item.gaiawanderer:lumberjack_axe=木こりの斧
 item.gaiawanderer:thunder_fan=稲妻の扇子
 item.gaiawanderer:gravity_spear=歪な砲槍
+item.gaiawanderer:ender_sword=エンダーソード
+item.gaiawanderer:ender_axe=奪命の戦斧
+item.gaiawanderer:founder_sword=ファウンダーソード
 
 item.gaiawanderer:hard_leather_helmet=ハードレザーヘルメット
 item.gaiawanderer:hard_leather_chestplate=ハードレザーチェストプレート
@@ -196,6 +203,8 @@ item.gaiawanderer:rotten_scythe=腐蝕した大鎌
 item.gaiawanderer:mutant_nether_jelly_arm=妖しい触手
 item.gaiawanderer:opabinia_arm=不気味な触腕
 item.gaiawanderer:rimafloga_stone=蝋焔の龍石
+item.gaiawanderer:ender_core=終末の源
+item.gaiawanderer:founder_debris=始祖の残骸
 
 item.gaiawanderer:shebrus_liver=シェブラスの肝
 item.gaiawanderer:adryva_drink=アドリーバドリンク
@@ -229,6 +238,11 @@ tile.gaiawanderer:diamond_end_stone.name=エンドのダイヤモンド
 tile.gaiawanderer:nether_diamond_ore.name=ネザーダイヤモンド鉱石
 tile.gaiawanderer:soul_soil_nether_diamond_ore.name=魂のネザーダイヤモンド鉱石
 tile.gaiawanderer:log_iron_ore.name=樹海鉄
+tile.gaiawanderer:primitive_stone.name=原初の石
+tile.gaiawanderer:primitive_log.name=原初の幹
+tile.gaiawanderer:primitive_water.name=原初の水
+tile.gaiawanderer:ender_brick.name=エンダーブリック
+tile.gaiawanderer:ender_lantern.name=エンダーランタン
 
 tile.gaiawanderer:rocked_barrel.text=鍵がかかっている
 
