各種テキストの追加

--- a/resource_pack/texts/ja_JP.lang
+++ b/resource_pack/texts/ja_JP.lang
@@ -21,7 +21,7 @@ entity.gaiawanderer:cutlassfish.name=タチウオ
 entity.gaiawanderer:locust.name=オオイナゴ
 entity.gaiawanderer:rolypse.name=ロリープス
 entity.gaiawanderer:mushspider.name=ムッシュスパイダー
-entity.gaiawanderer:rotten_zombie.name=腐蝕ゾンビ
+entity.gaiawanderer:rotten_zombie.name=ムッシュゾンビ
 entity.gaiawanderer:frost_beak.name=フロストビーク
 entity.gaiawanderer:frost_beak<>.name=フロストビーク
 entity.gaiawanderer:enchanted_book_trader.name=本屋
@@ -30,6 +30,9 @@ entity.gaiawanderer:forestgriff<>.name=フォレストグリフ
 entity.gaiawanderer:marrella.name=マーレラ・ファウンダー
 entity.gaiawanderer:shebrus_founder.name=シェブラス・ファウンダー
 entity.gaiawanderer:ender_proto.name=エンダープロト
+entity.gaiawanderer:ender_thrust.name=エンダースラスト
+entity.gaiawanderer:ender_snipe.name=エンダースナイプ
+entity.gaiawanderer:ender_snipe<>.name=エンダースナイプ
 
 entity.gaiawanderer:elsalamander<>.name=エルサラマンダー
 entity.gaiawanderer:elsalamander.name=エルサラマンダー
@@ -54,6 +57,8 @@ entity.gaiawanderer:rimafloga.name=リマフロガ
 
 entity.gaiawanderer:gravity_ball.name=グラビティボール
 entity.gaiawanderer:locator.name=テレポートアンカー
+entity.gaiawanderer:red_locator.name=レッドテレポートアンカー
+entity.gaiawanderer:purple_locator.name=パープルテレポートアンカー
 entity.gaiawanderer:interceptor.name=インターセプタ
 entity.gaiawanderer:interceptor_rapid.name=インターセプタ・ラピッド
 entity.gaiawanderer:interceptor_hover.name=インターセプタ・ホバー
@@ -88,17 +93,20 @@ item.spawn_egg.entity.gaiawanderer:locust.name=オオイナゴを出現させる
 item.spawn_egg.entity.gaiawanderer:rolypse.name=ロリープスを出現させる
 item.spawn_egg.entity.gaiawanderer:marrella.name=マーレラ・ファウンダーを出現させる
 item.spawn_egg.entity.gaiawanderer:mushspider.name=ムッシュスパイダーを出現させる
-item.spawn_egg.entity.gaiawanderer:rotten_zombie.name=腐蝕ゾンビを出現させる
+item.spawn_egg.entity.gaiawanderer:rotten_zombie.name=ムッシュゾンビを出現させる
 item.spawn_egg.entity.gaiawanderer:frost_beak.name=フロストビークを出現させる
 item.spawn_egg.entity.gaiawanderer:forestgriff.name=フォレストグリフを出現させる
 item.spawn_egg.entity.gaiawanderer:shebrus_founder.name=シェブラス・ファウンダーを出現させる
 item.spawn_egg.entity.gaiawanderer:ender_proto.name=エンダープロトを出現させる
+item.spawn_egg.entity.gaiawanderer:ender_thrust.name=エンダースラストを出現させる
+item.spawn_egg.entity.gaiawanderer:ender_snipe.name=エンダースナイプを出現させる
 item.spawn_egg.entity.gaiawanderer:enchanted_book_trader.name=本屋を出現させる
 
 item.spawn_egg.entity.gaiawanderer:elsalamander.name=§dエルサラマンダーを出現させる
 item.spawn_egg.entity.gaiawanderer:fortresscancer.name=§dフォートレスキャンサーを出現させる
 item.spawn_egg.entity.gaiawanderer:thunder_bird.name=§dサンダーバードを出現させる
 item.spawn_egg.entity.gaiawanderer:arachne_humanoid.name=§dムッシュアラクネを出現させる
+item.spawn_egg.entity.gaiawanderer:mutant_nether_jelly.name=§dミュータントネザージェリーを出現させる
 item.spawn_egg.entity.gaiawanderer:opabinia.name=§dオパビニア・ファウンダーを出現させる
 item.spawn_egg.entity.gaiawanderer:rimafloga.name=§dリマフロガを出現させる
 
@@ -112,6 +120,10 @@ item.gaiawanderer:interceptor_hover_item=インターセプタ・ホバー
 item.gaiawanderer:interceptor_canon_item=インターセプタ・キャノン
 item.gaiawanderer:teleporter=テレポーター
 item.gaiawanderer:locator_item=テレポートアンカー
+item.gaiawanderer:red_teleporter=レッドテレポーター
+item.gaiawanderer:red_locator_item=レッドテレポートアンカー
+item.gaiawanderer:purple_teleporter=パープルテレポーター
+item.gaiawanderer:purple_locator_item=パープルテレポートアンカー
 item.gaiawanderer:mantis_sickle=ローヴマンティスの鎌
 item.gaiawanderer:mantis_sword=マンティスソード
 item.gaiawanderer:mantis_shovel=マンティスシャベル
@@ -203,8 +215,10 @@ item.gaiawanderer:rotten_scythe=腐蝕した大鎌
 item.gaiawanderer:mutant_nether_jelly_arm=妖しい触手
 item.gaiawanderer:opabinia_arm=不気味な触腕
 item.gaiawanderer:rimafloga_stone=蝋焔の龍石
-item.gaiawanderer:ender_core=終末の源
+item.gaiawanderer:ender_core=終末の残滓
+item.gaiawanderer:ender_star=宵の明星
 item.gaiawanderer:founder_debris=始祖の残骸
+item.gaiawanderer:founder_star=明けの明星
 
 item.gaiawanderer:shebrus_liver=シェブラスの肝
 item.gaiawanderer:adryva_drink=アドリーバドリンク
