--- a/resource_pack/texts/ja_JP.lang
+++ b/resource_pack/texts/ja_JP.lang
@@ -267,7 +267,7 @@ tile.gaiawanderer:copy_table.name=複製台
 tile.gaiawanderer:bug_extract_block.name=虫の体液ブロック
 tile.gaiawanderer:bug_ingot_block.name=虫鉄鋼ブロック
 tile.gaiawanderer:burn_ingot_block.name=焔熱鋼ブロック
-tile.gaiawanderer:bug_ingot_block.name=腐蝕鋼ブロック
+tile.gaiawanderer:rotten_ingot_block.name=腐蝕鋼ブロック
 tile.gaiawanderer:nether_metal_block.name=ネザーメタルブロック
 tile.gaiawanderer:nether_diamond_block.name=ネザーダイヤモンドブロック
 
