複製紙と複製台

--- a/resource_pack/texts/ja_JP.lang
+++ b/resource_pack/texts/ja_JP.lang
@@ -213,6 +213,7 @@ item.gaiawanderer:griff_feed_food=グリフの懐き餌
 item.gaiawanderer:griff_growth_food=グリフの成長餌
 item.gaiawanderer:scholar_coin=研究者のコイン
 item.gaiawanderer:mysterious_literature=謎の文献
+item.gaiawanderer:copy_paper=複製紙
 
 item.gaiawanderer:elsalamander_tail=焔え盛る尻尾
 item.gaiawanderer:fortress_canon=砕けた砲塔
