抗毒マスクの追加

--- a/resource_pack/texts/ja_JP.lang
+++ b/resource_pack/texts/ja_JP.lang
@@ -182,6 +182,7 @@ item.gaiawanderer:golden_crown=輝く王冠
 item.gaiawanderer:silver_crown=くすんだ王冠
 item.gaiawanderer:burn_crown=焔の王冠
 item.gaiawanderer:air_helmet=潜水ヘルメット
+item.gaiawanderer:gas_mask=抗毒マスク
 
 item.gaiawanderer:fly_wing=鮮やかな翅
 item.gaiawanderer:strong_string=強靭な糸
