宝物樽を解錠するシステムを変更

--- a/resource_pack/texts/ja_JP.lang
+++ b/resource_pack/texts/ja_JP.lang
@@ -161,6 +161,7 @@ item.gaiawanderer:gravity_spear=サージ
 item.gaiawanderer:cantera=カンテラ
 item.gaiawanderer:rotten_thorn_item=腐蝕鉄針
 item.gaiawanderer:ice_beak=凍り付いた嘴
+item.gaiawanderer:rare_key=輝く宝物樽の鍵
 item.gaiawanderer:key=宝物樽の鍵
 item.gaiawanderer:rusted_key=朽ち果てた鍵
 item.gaiawanderer:lumberjack_axe=木こりの斧
